# webkey

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  main.c  ota.c  usb_descriptors.c  usb_init.c  web_server.c  wifi_init_sta.c
main/www-data/: index.html  index.html.in  update.html
